--- a/svc/hecate/src/components/void-experience/chat/voidChat.module.scss
+++ b/svc/hecate/src/components/void-experience/chat/voidChat.module.scss
@@ -180,8 +180,8 @@ $void-purple: #b967ff;
     }
   }
 
-  // Incoming - steam wrapping around, enveloping the chat
-  &.tendrilHit {
+  // Incoming - steam wrapping around, enveloping the chat (agent response received)
+  &.receiving {
     animation: steamWrap 1.2s ease-out forwards;
 
     &::before {
